# briefMLaccidentologie

./: .gitignore  CHECKPOINT_US02_COMPLETE.md  CHECKPOINT_US08_COMPLETE.md  README.md  data_dictionary_catboost_product15.md  data_dictionary_catboost_product15_v2.md  datadictionary_api.md  main.py  predictor.py  pyproject.toml  start.py  streamlit_app.py
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
data/: ref_options.json
specs/001-streamlit-prediction-ui/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-streamlit-prediction-ui/checklists/: requirements.md
specs/001-streamlit-prediction-ui/contracts/: api-predict.md  ref-schema.json
streamlit_lib/: api_client.py  models.py  reference_loader.py  session_state.py  validation.py
streamlit_pages/: 1_Contexte_Route.py  2_Infrastructure.py  3_Collision.py  4_Conducteur.py  5_Conditions.py  6_Recap_Prediction.py
tests/integration/: test_api_contract.py  test_conformity_product15.py  test_polish.py  test_us01_reset.py  test_us02_navigation.py  test_us03_dropdown_display.py  test_us04_not_specified.py  test_us05_validation.py  test_us06_minute_dropdown.py  test_us07_prediction.py  test_us08_recap.py  test_us09_help.py
tests/unit/: test_api_client.py  test_dropdown_format.py  test_reference_loader.py  test_validation.py
