[project]
name = "briefml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "catboost>=1.2.8",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "speckit-ai>=0.2.4",
    "streamlit>=1.19.0",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.3",
]
